[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/bsys_cursor.png" type="Texture" id=1]
[ext_resource path="res://img/placeholder.png" type="Texture" id=2]
[ext_resource path="res://scripts/DialogueBox.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 105, 105 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_pivot_offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_pivot_offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}

[node name="Dialogue" type="MarginContainer"]
anchor_right = 0.586914
anchor_bottom = 0.271667
rect_min_size = Vector2( 0, 100 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 600.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Margin"]
margin_left = 15.0
margin_top = 15.0
margin_right = 585.0
margin_bottom = 148.0

[node name="Bar" type="HBoxContainer" parent="MarginContainer/Margin/VBox"]
margin_right = 570.0
margin_bottom = 24.0

[node name="NameDrop" type="OptionButton" parent="MarginContainer/Margin/VBox/Bar"]
margin_right = 67.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 0
text = "NAME"

[node name="PreviewButton" type="CheckBox" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 71.0
margin_right = 149.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
text = "Preview"

[node name="MessageIDLine" type="LineEdit" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 153.0
margin_right = 211.0
margin_bottom = 24.0
expand_to_text_length = true
placeholder_text = "ID"

[node name="NameLine" type="LineEdit" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 215.0
margin_right = 273.0
margin_bottom = 24.0
expand_to_text_length = true
placeholder_text = "NAME"

[node name="FaceDisable" type="CheckBox" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 277.0
margin_right = 301.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[node name="FaceIndex" type="SpinBox" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 305.0
margin_right = 460.0
margin_bottom = 24.0
size_flags_horizontal = 3
prefix = "FaceIndex:"

[node name="FaceSet" type="OptionButton" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 464.0
margin_right = 546.0
margin_bottom = 24.0
text = "Faceset:"

[node name="DeleteButton" type="Button" parent="MarginContainer/Margin/VBox/Bar"]
margin_left = 550.0
margin_right = 570.0
margin_bottom = 24.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="MarginContainer/Margin/VBox"]
margin_top = 28.0
margin_right = 570.0
margin_bottom = 133.0
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Margin/VBox/HBox"]
margin_right = 461.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextLabel" type="TextEdit" parent="MarginContainer/Margin/VBox/HBox/VBox"]
margin_right = 461.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="Face" type="TextureRect" parent="MarginContainer/Margin/VBox/HBox"]
margin_left = 465.0
margin_right = 570.0
margin_bottom = 105.0
size_flags_horizontal = 8
texture = SubResource( 2 )

[node name="Control" type="Control" parent="MarginContainer/Margin"]
margin_left = 15.0
margin_top = 15.0
margin_right = 585.0
margin_bottom = 148.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="MarginContainer/Margin/Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -171.0
margin_top = -33.0
margin_right = -142.0
margin_bottom = -18.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/Margin/Control/Sprite"]
anims/float = SubResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="toggled" from="MarginContainer/Margin/VBox/Bar/PreviewButton" to="." method="_on_PreviewButton_toggled"]
[connection signal="text_changed" from="MarginContainer/Margin/VBox/Bar/MessageIDLine" to="." method="IDchange"]
[connection signal="toggled" from="MarginContainer/Margin/VBox/Bar/FaceDisable" to="." method="faceToggle"]
[connection signal="value_changed" from="MarginContainer/Margin/VBox/Bar/FaceIndex" to="." method="faceIndexChange"]
[connection signal="item_selected" from="MarginContainer/Margin/VBox/Bar/FaceSet" to="." method="facesetChange"]
[connection signal="button_up" from="MarginContainer/Margin/VBox/Bar/DeleteButton" to="." method="deleteBox"]
